# proface-ansys-pre

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
LICENSES/: LicenseRef-EU-Emblem-Regulation-2022-720.txt
assets/: EN_Co-fundedbytheEU_RGB_POS.png.license
src/proface/ansys/preprocessor/: __init__.py  translator.py  wrapper.py
